--- a/platformio.ini
+++ b/platformio.ini
@@ -25,9 +25,9 @@ upload_protocol = esptool
 monitor_speed = 115200
 
 build_flags = 
+	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DBOARD_HAS_PSRAM
 	-I C:\Users\dhima\Desktop\microByte_Arduino\src\components\ui
-	-DUSB_SERIAL
 
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.43
